# cpp-game-server

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  conanfile.txt
data/: config.json
src/: app.cpp  app.hpp  character.cpp  character.hpp  cli.cpp  cli.hpp  collisions.cpp  collisions.hpp  common_http.hpp  config.cpp  config.hpp  content_type.cpp  content_type.hpp  core.cpp  core.hpp  endpoint.cpp  endpoint.hpp  extra_data.cpp  extra_data.hpp  game.cpp  game.hpp  geometry.hpp  handlers.hpp  http_methods.cpp  http_methods.hpp  json_loader.cpp  json_loader.hpp  listener.hpp  logger.cpp  logger.hpp  loot.cpp  loot.hpp  main.cpp  map.cpp  map.hpp  mux.cpp  mux.hpp  player.cpp  player.hpp  request_handler.cpp  (+9 more)
tests/: collisions_detect_tests.cpp  loot_generator_tests.cpp  serialization_tests.cpp
